# job_hunter_toolbox

./: .gitignore  README.md  application_generator.py  chunking.py  cli.py  generation_notebook.ipynb  generation_schemas.py  job_extract.py  latex_toolbox.py  logger.py  main.py  metrics.py  models.py  pyproject.toml  ranking.py  ranking_models.py  requirements.txt  resume_generator.py  resume_ranking_notebook.ipynb  utils.py
.cache_ranker/: all-MiniLM-L6-v2_3282053fd3648135_06d440d9c0e07891.pkl  all-MiniLM-L6-v2_3282053fd3648135_28e78237596079bd.pkl  all-MiniLM-L6-v2_3282053fd3648135_2aa4b9dd0166eb05.pkl  all-MiniLM-L6-v2_3282053fd3648135_33742ba2b042db2a.pkl  all-MiniLM-L6-v2_3282053fd3648135_5a94c382bb531980.pkl  all-MiniLM-L6-v2_3282053fd3648135_5cf3cf55ffb34ad7.pkl  all-MiniLM-L6-v2_3282053fd3648135_66c6d3b03af24b0d.pkl  all-MiniLM-L6-v2_3282053fd3648135_6e86a888c3b45579.pkl  all-MiniLM-L6-v2_3282053fd3648135_736a712e0eaaa146.pkl  all-MiniLM-L6-v2_3282053fd3648135_93df051e48eec96b.pkl  all-MiniLM-L6-v2_3282053fd3648135_980b65d47e98f6be.pkl  all-MiniLM-L6-v2_3282053fd3648135_9c74427299e668c0.pkl  all-MiniLM-L6-v2_3282053fd3648135_a685c2f386c4585b.pkl  all-MiniLM-L6-v2_3282053fd3648135_bfa11d16ff4c5b93.pkl  all-MiniLM-L6-v2_3282053fd3648135_c3a6251e5bf67bd3.pkl  all-MiniLM-L6-v2_3282053fd3648135_dd56e617455801b9.pkl  all-MiniLM-L6-v2_3282053fd3648135_e20a22f73bd0606c.pkl  all-MiniLM-L6-v2_3282053fd3648135_e784c9a3d27bcfab.pkl  all-MiniLM-L6-v2_3282053fd3648135_eafa3d94943e15f4.pkl  all-MiniLM-L6-v2_3282053fd3648135_f1de7dd0696b2e98.pkl  all-MiniLM-L6-v2_9c7131be18a9a584_06d440d9c0e07891.pkl  all-MiniLM-L6-v2_9c7131be18a9a584_266e5d466d27f12c.pkl  all-MiniLM-L6-v2_9c7131be18a9a584_27dd547a16d60873.pkl  all-MiniLM-L6-v2_9c7131be18a9a584_33742ba2b042db2a.pkl  all-MiniLM-L6-v2_9c7131be18a9a584_5a94c382bb531980.pkl  all-MiniLM-L6-v2_9c7131be18a9a584_6dc6897eb6db654a.pkl  all-MiniLM-L6-v2_9c7131be18a9a584_887e5d6163a07896.pkl  all-MiniLM-L6-v2_9c7131be18a9a584_980b65d47e98f6be.pkl  all-MiniLM-L6-v2_9c7131be18a9a584_b7bf457add34a687.pkl  all-MiniLM-L6-v2_9c7131be18a9a584_d8bd74f27125049e.pkl
prompts/: cover_letter_prompts.py  extraction_prompts.py  resume_section_prompts.py  validation_prompts.py
schemas/: resume_schemas.py
templates/: goal_template.tex  less_basic_template.cls  less_basic_template.tex  master.tex  resume.cls  resume.tex.jinja  slightly_less_basic_template.tex
