[project]
name = "job-hunter-toolbox"
version = "0.1.0"
description = "Automates resume and cover letter generation using LaTeX, Python, and LLM services to streamline the job application process."
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "annotated-types>=0.7.0",
    "anyio>=4.11.0",
    "certifi>=2025.10.5",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.4",
    "cryptography>=46.0.3",
    "decorator>=5.2.1",
    "fpdf2>=2.8.4",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "ipykernel>=7.0.1",
    "ipython>=9.6.0",
    "ipywidgets>=8.1.7",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jiter>=0.11.1",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.9.1",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.0",
    "markitdown[all]>=0.1.3",
    "matplotlib>=3.10.7",
    "openai>=2.5.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.11.0",
    "pypdf2>=3.0.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
]
